--- a/home.html
+++ b/home.html
@@ -1,16 +1,8 @@
-<html>
+<section id="cars"></section>
 
-    <head>
-        <meta charset="utf-8">
-        <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <title>GETTING STARTED WITH BRACKETS</title>
-        <meta name="description" content="An interactive getting started guide for Brackets.">
-        <link rel="stylesheet" href="main.css">
-    </head>
-    <body>
-
-        <h1>GETTING STARTED WITH BRACKETS</h1>
-        <h2>This is your guide!</h2>
-        <p> meow </p>
-    </body>
-</html>
+<template id="carTemplate">
+  <article class="car">
+    <h1>MAKE - MODEL</h1>
+    <p class="price">Price: <span></span>dkr</p>
+  </article>
+</template>
