--- a/index.html
+++ b/index.html
@@ -1,58 +1,105 @@
 <!DOCTYPE html>
-<html>
-
-    <head>
-        <meta charset="utf-8">
-        <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <title>GETTING STARTED WITH BRACKETS</title>
-        <meta name="description" content="An interactive getting started guide for Brackets.">
-        <link rel="stylesheet" href="main.css">
-    </head>
-    <body>
-
-        <h1>GETTING STARTED WITH BRACKETS</h1>
-        <h2>This is your guide!</h2>
-
-        <!--
-            MADE WITH <3 AND JAVASCRIPT
-        -->
-
-        <p>
-            Welcome to Brackets, a modern open-source code editor that understands web design. It's a lightweight,
-            yet powerful, code editor that blends visual tools into the editor so you get the right amount of help
-            when you want it.
-        </p>
-
-        <!--
-            WHAT IS BRACKETS?
-        -->
-        <p>
-            <em>Brackets is a different type of editor.</em>
-            Brackets has some unique features like Quick Edit, Live Preview and others that you may not find in other
-            editors. Brackets is written in JavaScript, HTML and CSS. That means that most of you using Brackets
-            have the skills necessary to modify and extend the editor. In fact, we use Brackets every day to build
-            Brackets. To learn more about how to use the key features, read on.
-        </p>
-
-        <!--
-            GET STARTED WITH YOUR OWN FILES
-        -->
-
-        <h3>Projects in Brackets</h3>
-        <p>
-            In order to edit your own code using Brackets, you can just open the folder containing your files.
-            Brackets treats the currently open folder as a "project"; features like Code Hints, Live Preview and
-            Quick Edit only use files within the currently open folder.
-        </p>
-
-        <samp>
-            Once you're ready to get out of this sample project and edit your own code, you can use the dropdown
-            in the left sidebar to switch folders. Right now, the dropdown says "Getting Started" - that's the
-            folder containing the file you're looking at right now. Click on the dropdown and choose "Open Folder…"
-            to open your own folder.
-            You can also use the dropdown later to switch back to folders you've opened previously, including this
-            sample project.
-
-        </samp>
-    </body>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+    <title>Card Layout with CSS Grid</title>
+    <link rel="stylesheet" href="style.css" />
+    <link
+      href="https://fonts.googleapis.com/css?family=Open+Sans&display=swap"
+      rel="stylesheet"
+    />
+  </head>
+  <body>
+    <main>
+      <section class="cards">
+        <div class="card">
+          <div class="card__image-container">
+            <img
+              src="images/test.jpg"
+              alt="Detailed image description would go here."
+            />
+          </div>
+          <div class="card__content">
+            <p class="card__title text--medium">
+              Dish name
+            </p>
+            <div class="card__info">
+              <p class="text--medium">Status: <span>Sold out</span>
+              <p class="card__price text--medium">Free</p>
+            </div>
+          </div>
+        </div>
+        <div class="card">
+          <div class="card__image-container">
+            <img
+              src="images/test.jpg"
+              alt="Detailed image description would go here."
+            />
+          </div>
+          <div class="card__content">
+            <p class="card__title text--medium">
+              Dish name
+            </p>
+            <div class="card__info">
+              <p class="text--medium">Status: <span>Sold out</span></p>
+              <p class="card__price text--medium">Free</p>
+            </div>
+          </div>
+        </div>
+        <div class="card">
+          <div class="card__image-container">
+            <img
+              src="images/test.jpg"
+              alt="Detailed image description would go here."
+            />
+          </div>
+          <div class="card__content">
+            <p class="card__title text--medium">
+              Dish name
+            </p>
+            <div class="card__info">
+              <p class="text--medium">Status: <span>Sold out</span></p>
+              <p class="card__price text--medium">Free</p>
+            </div>
+          </div>
+        </div>
+        <div class="card">
+          <div class="card__image-container">
+            <img
+              src="images/test.jpg"
+              alt="Detailed image description would go here."
+            />
+          </div>
+          <div class="card__content">
+            <p class="card__title text--medium">
+              Dish name
+            </p>
+            <div class="card__info">
+              <p class="text--medium">Status: <span>Sold out</span>
+              <p class="card__price text--medium">Free</p>
+            </div>
+          </div>
+        </div>
+        <div class="card">
+          <div class="card__image-container">
+            <img
+              src="images/test.jpg"
+              alt="Detailed image description would go here."
+            />
+          </div>
+          <div class="card__content">
+            <p class="card__title text--medium">
+              Dish name
+            </p>
+            <div class="card__info">
+              <p class="text--medium">Status: <span>Sold out</span>
+              <p class="card__price text--medium">Free</p>
+            </div>
+          </div>
+        </div>
+      </section>
+    </main>
+  </body>
 </html>
